# CADE_FIRCE

./: .gitignore  Makefile  README.md  average_all_detection_results.py  evaluate_explanation_by_distance.py  main.py  pyproject.toml  setup.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labels.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  task.md
.github/workflows/: publish.yml  style.yml  tests.yml
IDS_data_preprocess/: clean_data.py  gen_IDS_data.py
cade/: autoencoder.py  classifier.py  config.py  data.py  detect.py  evaluate.py  explain_by_distance.py  explain_global_approximation_loose_boundary.py  logger.py  mask_exp_by_approximation.py  mask_exp_by_distance_mask_m1.py  utils.py
scripts/: average_all_detection_results.py  evaluate_explanation_by_distance.py  test_gpu.py
scripts/data_prep/: clean_data.py
scripts/shell/: run_boundary_exp_drebin_fakedoc.sh  run_boundary_exp_ids_infiltration.sh  run_cade_exp_drebin_fakedoc.sh  run_cade_exp_ids_infiltration.sh  run_drebin_cade.sh  run_drebin_pure_ae.sh  run_ids_cade.sh  run_ids_pure_ae.sh
src/cade/: __init__.py  __main__.py  autoencoder.py  classifier.py  cli.py  config.py  data.py  detect.py  evaluate.py  explain_by_distance.py  explain_global_approximation_loose_boundary.py  logger.py  mask_exp_by_approximation.py  mask_exp_by_distance_mask_m1.py  runtime.py  utils.py
tests/: conftest.py  test_placeholder.py
tests/smoke/: test_entrypoint.py  test_package_import.py
tests/unit/cade/: test_data_load_features.py  test_detect_helpers.py  test_init.py  test_parse_args.py  test_prepare_dataset.py  test_utils.py
