[project]
name = "cade-firce"
version = "0.1.0"
description = "CADE (modernized) for integration into FIRCE"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "DFAIR Lab (Augusta University)" }]

# Keep runtime deps lean + compatible w/ Py3.11
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[project.optional-dependencies]
# TensorFlow stack:
# - On Apple Silicon dev: tensorflow-macos + tensorflow-metal
# - On Linux/others: tensorflow (pip package)
tf = [
  "tensorflow>=2.15,<3; platform_system != 'Darwin'",
  "tensorflow-macos>=2.15,<3; platform_system == 'Darwin' and platform_machine == 'arm64'",
  "tensorflow-metal>=1.1; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

# If you later want separate “extras” for prod GPU vs CPU, uv supports extras + sources/indexes,
# but this basic split is usually enough for M1 dev vs Linux GPU. :contentReference[oaicite:3]{index=3}

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.8",
  "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cade"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]