[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/cade"]

[project]
name = "cade-firce"
version = "0.3.11"
description = "CADE (modernized) for integration into FIRCE"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "DFAIR Lab (Augusta University)" }]

# Keep runtime deps lean + compatible w/ Py3.11
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "joblib>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "seaborn>=0.13",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.8",
  "pre-commit>=3.7",
]
tf = [
  "keras>=3.10,<4",
  "tensorflow>=2.19,<3; platform_system == 'Darwin'",
]
  
tf-deb = [
  "keras>=3.10,<4",
  "tensorflow[and-cuda]==2.19.1; platform_system == 'Linux'",
]

[project.scripts]
cade-main = "cade.cli:main"
cade-clean = "scripts.data_prep.clean_data:main" # requires adding a main() to clean_data

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests with no real external I/O",
    "integration: multi-module tests using real temp files and tiny datasets",
    "smoke_sanity: minimal package/CLI startup checks",
    "fast: extra-fast subset for tight loops",
    "regression: guards against a previously seen bug",
]
pythonpath = ["src"]