[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/cade"]

[project]
name = "cade-firce"
version = "0.4.0"
description = "Modernized CADE package for concept drift detection, adapted for FIRCE integration."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }

authors = [
  { name = "Limin Yang" },
  { name = "Wenbo Guo" },
  { name = "Qingying Hao" },
  { name = "Arridhana Ciptadi" },
  { name = "Ali Ahmadzadeh" },
  { name = "Xinyu Xing" },
  { name = "Gang Wang" }
]

maintainers = [
  { name = "Seth Barrett" },
  { name = "DFAIR Lab (Augusta University)" }
]

keywords = [
  "concept drift",
  "drift detection",
  "machine learning",
  "cybersecurity",
  "intrusion detection",
  "tensorflow",
  "keras",
  "firce",
  "cade"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
  "License :: Free for non-commercial use"
]

dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "keras>=3.10,<4",
  "tensorflow>=2.19,<3; platform_system == 'Darwin'",
  "tensorflow[and-cuda]==2.19.1; platform_system == 'Linux'",
]

[project.urls]
Homepage = "https://github.com/DFAIR-LAB-Augusta/CADE_FIRCE"
Repository = "https://github.com/DFAIR-LAB-Augusta/CADE_FIRCE"
Issues = "https://github.com/DFAIR-LAB-Augusta/CADE_FIRCE/issues"
Upstream = "https://github.com/whyisyoung/CADE"
Paper = "https://www.usenix.org/conference/usenixsecurity21/presentation/yang-limin"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.8",
  "pre-commit>=3.7",
  "deptry>=0.25.1",
  "twine>=6.2.0",
]

scripting = [
  "pandas>=1.5",
  "joblib>=1.3",
  "pyyaml>=6.0",
]

[project.scripts]
cade-main = "cade.cli:main"
cade-clean = "scripts.data_prep.clean_data:main" # requires adding a main() to clean_data

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests with no real external I/O",
    "integration: multi-module tests using real temp files and tiny datasets",
    "smoke_sanity: minimal package/CLI startup checks",
    "fast: extra-fast subset for tight loops",
    "regression: guards against a previously seen bug",
]
pythonpath = ["src"]

[tool.deptry]
root = ["src"]

[tool.deptry.per_rule_ignores]
DEP003 = ["cade"]
